--- a/deep_io/definitivo_v4.ipynb
+++ b/deep_io/definitivo_v4.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "La red devuelve los parametros del prbema y en la funcion loss resolveremos el problema de optimizacion."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Parte 1: obtenemos los datos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +73,7 @@
        "        [ 1.5000]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +109,7 @@
        "        [ 1.5000]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +191,7 @@
        "        [ 0.7000,  0.3000]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +243,7 @@
        "        [ 0.7000,  0.3000]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,41 +370,85 @@
     "import cvxpy as cp\n",
     "from cvxpylayers.torch import CvxpyLayer\n",
     "\n",
-    "def solver(c_, A_, b_):\n",
-    "    m,n = A_.shape\n",
+    "# def solver(c_, A_, b_):\n",
+    "#     '''\n",
+    "#     el problema de este solver es que la red devuelve\n",
+    "#     parametros que hacen que el problema no tenga\n",
+    "#     solucion o no esté acotada\n",
+    "#     '''\n",
+    "#     m,n = A_.shape\n",
     "\n",
-    "    A = cp.Parameter((m, n))\n",
-    "    b = cp.Parameter(m)\n",
-    "    c = cp.Parameter(n)\n",
-    "    x = cp.Variable(n)\n",
+    "#     A = cp.Parameter((m, n))\n",
+    "#     b = cp.Parameter(m)\n",
+    "#     c = cp.Parameter(n)\n",
+    "#     x = cp.Variable(n)\n",
     "\n",
-    "    obj = cp.Minimize(c.T @ x)\n",
-    "    cons = [ A @ x <= b ]\n",
-    "    prob = cp.Problem(obj, cons)\n",
+    "#     obj = cp.Minimize(c.T @ x)\n",
+    "#     cons = [ A @ x <= b ]\n",
+    "#     prob = cp.Problem(obj, cons)\n",
     "\n",
-    "    layer = CvxpyLayer(prob, parameters=[c,A,b], variables=[x])\n",
+    "#     layer = CvxpyLayer(prob, parameters=[c,A,b], variables=[x])\n",
     "\n",
-    "    # solution, = layer(c_, A_, b_)\n",
-    "    # return solution\n",
-    "    try:\n",
-    "        solution, = layer(c_, A_, b_)\n",
-    "        return solution\n",
-    "    except Exception as e:\n",
-    "        # print(\"El problema no tiene solución o es numéricamente inestable.\")\n",
-    "        return torch.tensor([0.0, 0.0], dtype=torch.float32, requires_grad=True)"
+    "#     # solution, = layer(c_, A_, b_)\n",
+    "#     # return solution\n",
+    "#     try:\n",
+    "#         solution, = layer(c_, A_, b_)\n",
+    "#         return solution\n",
+    "#     except Exception as e:\n",
+    "#         # print(\"El problema no tiene solución o es numéricamente inestable.\")\n",
+    "#         return torch.tensor([0.0, 0.0], dtype=torch.float32, requires_grad=True)\n",
+    "\n",
+    "# def solver(c_, A_, b_):\n",
+    "#     '''\n",
+    "#     resuelto medianet cvxpy pero envolviendo\n",
+    "#     la variable en una caja\n",
+    "#     '''\n",
+    "#     m,n = A_.shape\n",
+    "\n",
+    "#     A = cp.Parameter((m, n))\n",
+    "#     b = cp.Parameter(m)\n",
+    "#     c = cp.Parameter(n)\n",
+    "#     x = cp.Variable(n)\n",
+    "\n",
+    "#     obj = cp.Minimize(c.T @ x)\n",
+    "#     cons = [ A @ x <= b, x >= 0.0, x <= 1000000000.0 ]\n",
+    "#     prob = cp.Problem(obj, cons)\n",
+    "\n",
+    "#     layer = CvxpyLayer(prob, parameters=[c,A,b], variables=[x])\n",
+    "\n",
+    "#     solution, = layer(c_, A_, b_)\n",
+    "#     return solution\n",
+    "\n",
+    "def smooth_lp(c, A, b):\n",
+    "    ''' \n",
+    "    metodo de la M grande pero con descenso \n",
+    "    por el grandiente\n",
+    "    '''\n",
+    "    # Inicializar x con gradientes habilitados\n",
+    "    x = torch.zeros(A.shape[1], requires_grad=True)\n",
+    "    optimizer = torch.optim.SGD([x])\n",
+    "\n",
+    "    for _ in range(10000):\n",
+    "        optimizer.zero_grad()\n",
+    "        constraint_penalty = torch.sum(torch.relu(A @ x - b))\n",
+    "        objective = torch.dot(c, x) + 1000.0 * constraint_penalty\n",
+    "        objective.backward(retain_graph=True)  # Mantén el grafo activo\n",
+    "        optimizer.step()\n",
+    "    return x\n",
+    "\n",
+    "solver = smooth_lp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "tensor([0., 0.], requires_grad=True)\n"
+      "tensor([-1.0000e+01, -9.3546e-05], requires_grad=True)\n"
      ]
     }
    ],
@@ -420,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +550,7 @@
        ")"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -614,43 +665,11 @@
      "text": [
       "Epoch 1\n",
       "-------------------------------\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "loss: 0.027155  [    2/   32]\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "loss: 1.014696  [   18/   32]\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
-      "Please consider re-formulating your problem so that it is always solvable or increasing the number of solver iterations.\n",
+      "loss: 0.410847  [    2/   32]\n",
+      "loss: 5.947088  [   18/   32]\n",
       "\n",
       "Training Error: \n",
-      " Accuracy: 0.0%, Avg loss: 0.460763 \n",
+      " Accuracy: 0.0%, Avg loss: 4.129632 \n",
       "\n"
      ]
     },
@@ -661,8 +680,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[96], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m     loss, accuracy \u001b[38;5;241m=\u001b[39m train_loop(dataloader, model, loss_fn, optimizer)\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mTraining Error: \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m Accuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m(\u001b[38;5;241m100\u001b[39m\u001b[38;5;241m*\u001b[39maccuracy)\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m>0.1f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%, Avg loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mloss\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m>8f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m     \u001b[43mtest_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mval_dataloader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloss_fn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDone!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# ahora lo que esta pasando es que el modelo devuelve unos parametros del problema que no tienen sentido, por lo que la solucion no es correcta\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[95], line 10\u001b[0m, in \u001b[0;36mtest_loop\u001b[0;34m(dataloader, model, loss_fn)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m u_batch, x_batch \u001b[38;5;129;01min\u001b[39;00m dataloader:\n\u001b[1;32m      9\u001b[0m     rs \u001b[38;5;241m=\u001b[39m model(u_batch)\n\u001b[0;32m---> 10\u001b[0m     test_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mloss_fn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx_batch\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mitem()\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;66;03m# correct += near(rs, x_batch, tol) # consideramos correcto si se acerca a la solucion en la distancia euclidea \u001b[39;00m\n\u001b[1;32m     12\u001b[0m test_loss \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m num_batches\n",
+      "Cell \u001b[0;32mIn[73], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m     loss, accuracy \u001b[38;5;241m=\u001b[39m train_loop(dataloader, model, loss_fn, optimizer)\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mTraining Error: \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m Accuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m(\u001b[38;5;241m100\u001b[39m\u001b[38;5;241m*\u001b[39maccuracy)\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m>0.1f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%, Avg loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mloss\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m>8f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m     \u001b[43mtest_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mval_dataloader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloss_fn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDone!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# ahora lo que esta pasando es que el modelo devuelve unos parametros del problema que no tienen sentido, por lo que la solucion no es correcta\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[72], line 10\u001b[0m, in \u001b[0;36mtest_loop\u001b[0;34m(dataloader, model, loss_fn)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m u_batch, x_batch \u001b[38;5;129;01min\u001b[39;00m dataloader:\n\u001b[1;32m      9\u001b[0m     rs \u001b[38;5;241m=\u001b[39m model(u_batch)\n\u001b[0;32m---> 10\u001b[0m     test_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mloss_fn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx_batch\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mitem()\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;66;03m# correct += near(rs, x_batch, tol) # consideramos correcto si se acerca a la solucion en la distancia euclidea \u001b[39;00m\n\u001b[1;32m     12\u001b[0m test_loss \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m num_batches\n",
       "\u001b[0;31mTypeError\u001b[0m: loss_fn() missing 2 required positional arguments: 'bs' and 'X_true'"
      ]
     }
