--- a/deep_io/definitivo_v1.ipynb
+++ b/deep_io/definitivo_v1.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Método de la M grande, "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Parte 1: obtenemos los datos"
    ]
   },
@@ -220,8 +227,8 @@
     "    for _ in range(100):\n",
     "        optimizer.zero_grad()\n",
     "        constraint_penalty = torch.sum(torch.relu(A @ x - b))\n",
-    "        objective = torch.dot(c, x) + 100.0 * constraint_penalty\n",
-    "        objective.backward(retain_graph=True)  # Mantén el grafo activo\n",
+    "        objective = torch.dot(c, x) + 1000.0 * constraint_penalty\n",
+    "        objective.backward(retain_graph=True)\n",
     "        optimizer.step()\n",
     "    return x  # Sin detach()\n"
    ]
@@ -652,7 +659,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -666,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
